# AIKZ

./: .env  .gitignore  .mcp.json  ACTUALIZACIONES.md  INSTRUCCIONES_CLIENTE.md  RELEASE-CHECKLIST.md  UPDATER_SETUP.md  actions.md  build-for-client.sh  database_v1.sql  latest.json  package-lock.json  package.json  vite.config.js  webapp-folder-structure.md
.claude/agents/: component-creator.md
.github/workflows/: release.yml
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/almacen-mp/: AlmacenMpCelofanList.jsx  EntradaMpCards.jsx  (+8 more)
src/components/almacen-mp-polietileno/: AlmacenMpPolietilenList.jsx  EntradaMpPolietilenCards.jsx  EntradaMpPolietilenForm.jsx  InventarioMpPolietilenTable.jsx  MateriaPrimaPolietilenForm.jsx  MateriaPrimaPolietilenList.jsx  SalidaMpPolietilenCards.jsx  SalidaMpPolietilenForm.jsx
src/hooks/: README.md  useClientesData.js  useEstadisticasNotasVenta.js  useNotasVenta.js  useProductos.js  useUpdater.js  useVendedoresData.js
src/pages/: AlmacenCelofan.jsx  AlmacenMpCelofan.jsx  AlmacenMpPolietileno.jsx  AlmacenPolietileno.jsx  CuentasPorCobrar.jsx  CuentasPorPagar.jsx  Dashboard.jsx  DashboardFinanciero.jsx  DetalleCliente.jsx  DetalleNotaVenta.jsx  DetalleVendedor.jsx  Pedidos.jsx  ProduccionCelofan.jsx  ProduccionPolietileno.jsx  ProveedoresCelofan.jsx  ProveedoresPolietileno.jsx  ReportesContables.jsx
src/services/: README.md  database.js  supabase.js
src/styles/: globals.css
src/utils/: testData.js
(+91 files in other folders)
