[package]
name = "aikz-gestion"
version = "1.0.0"
description = "Sistema de gestión empresarial AIKZ"
authors = ["AIKZ"]
license = ""
repository = ""
default-run = "aikz-gestion"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-updater = "2.9.0"
